Clean some sonar code smells (#1119)
* Cleaned up the easy to fix sonar smells
Signed-off-by: Philippe Edwards <philippe.edwards@rte-france.com>